--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,5 @@
 # https://opendistro.github.io/for-elasticsearch-docs/docs/install/docker/
+# modified cluster.name form odfe-cluster to docker-cluster
 
 version: '3'
 services:
@@ -6,7 +7,7 @@ services:
     image: amazon/opendistro-for-elasticsearch:1.2.0
     container_name: odfe-node1
     environment:
-      - cluster.name=odfe-cluster
+      - cluster.name=docker-cluster
       - node.name=odfe-node1
       - discovery.seed_hosts=odfe-node1,odfe-node2
       - cluster.initial_master_nodes=odfe-node1,odfe-node2
@@ -31,7 +32,7 @@ services:
     image: amazon/opendistro-for-elasticsearch:1.2.0
     container_name: odfe-node2
     environment:
-      - cluster.name=odfe-cluster
+      - cluster.name=docker-cluster
       - node.name=odfe-node2
       - discovery.seed_hosts=odfe-node1,odfe-node2
       - cluster.initial_master_nodes=odfe-node1,odfe-node2
